--- a/presto.html
+++ b/presto.html
@@ -22,9 +22,12 @@
   </head>
   <body>
 
+    <!-- Sito template -->
+    <!-- https://technext.github.io/electro/ -->
+
     <!-- Header -->
-    <header id="headerContainerFluid" class="container-fluid back-main pb-3">
-        <div id="headerRow" class="row pt-3 h-100 align-items-center">
+    <header id="headerContainerFluid" class="container-fluid back-main">
+        <div id="headerRow" class="row align-items-center">
             <div class="col-6 col-md-3">
                 <a id="logoText" class="navbar-brand ms-4 customBlack" href="#"><span id="pSpan" class="secColor">P</span>resto<span id="dotSpan" class="secColor">.</span>it</a>
             </div>
@@ -47,7 +50,7 @@
                         <p class="cartAndWishlistP">Your Cart</p>
                     </div>
                 </div>
-                <div class="mx-3">
+                <div class="me-3">
                     <button id="navbarExpander" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span><i id="arrowNavbar" class="fa-solid fa-circle-arrow-down"></i></span>
                     </button>
@@ -69,7 +72,7 @@
             </div>
         </div>
         <div class="d-md-none col-md-4 d-flex align-items-center justify-content-center">
-            <form class="d-flex mx-3 mt-3 w-100">
+            <form class="d-flex mx-3 w-100">
                 <input id="searchBar" class="form-control me-0" type="search" placeholder="Search here" aria-label="Search">
                 <button id="searchBtn" class="btn ms-0 back-sec" type="submit">Search</button>
             </form>
@@ -106,6 +109,52 @@
             </div>
         </div>
     </nav>
+
+    <!-- Categories section -->
+    <section class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-12 col-sm-6 col-lg-3 mx-0 px-0 d-flex justify-content-center">
+                <div class="card categoriesCards categoriesCard1">
+                    <div class="bgCategories">
+                    </div>
+                    <div class="p-3 textCategories">
+                        <h3 class="customBlack">Laptop collection</h3>
+                        <button class="shopBtn customBlack">SHOP NOW <i class="fa-solid fa-circle-arrow-right"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 mx-0 px-0 d-flex justify-content-center">
+                <div class="card categoriesCards categoriesCard2">
+                    <div class="bgCategories">
+                    </div>
+                    <div class="p-3 textCategories">
+                        <h3 class="customBlack">Accessories collection</h3>
+                        <button class="shopBtn customBlack">SHOP NOW <i class="fa-solid fa-circle-arrow-right"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 mx-0 px-0 d-flex justify-content-center">
+                <div class="card categoriesCards categoriesCard3">
+                    <div class="bgCategories">
+                    </div>
+                    <div class="p-3 textCategories">
+                        <h3 class="customBlack">Cameras collection</h3>
+                        <button class="shopBtn customBlack">SHOP NOW <i class="fa-solid fa-circle-arrow-right"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 mx-0 px-0 d-flex justify-content-center">
+                <div class="card categoriesCards categoriesCard4">
+                    <div class="bgCategories">
+                    </div>
+                    <div class="p-3 textCategories">
+                        <h3 class="customBlack">Smartphones collection</h3>
+                        <button class="shopBtn customBlack">SHOP NOW <i class="fa-solid fa-circle-arrow-right"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
