--- a/presto.html
+++ b/presto.html
@@ -15,6 +15,9 @@
 
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Swiper -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     
     <!-- My CSS -->
     <link rel="stylesheet" href="./presto.css">
@@ -29,7 +32,7 @@
     <header id="headerContainerFluid" class="container-fluid back-main">
         <div id="headerRow" class="row align-items-center">
             <div class="col-6 col-md-3">
-                <a id="logoText" class="navbar-brand ms-4 customBlack" href="#"><span id="pSpan" class="secColor">P</span>resto<span id="dotSpan" class="secColor">.</span>it</a>
+                <a id="logoText" class="navbar-brand ms-4 customBlack ubuntuFont" href="#"><span id="pSpan" class="secColor">P</span>resto<span id="dotSpan" class="secColor ubuntuFont">.</span>it</a>
             </div>
             <div class="d-none d-md-flex col-md-6">
                 <form class="d-flex w-100">
@@ -52,7 +55,7 @@
                 </div>
                 <div class="me-3">
                     <button id="navbarExpander" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span><i id="arrowNavbar" class="fa-solid fa-circle-arrow-down"></i></span>
+                        <span><i id="arrowNavbar" class="fa-solid fa-circle-arrow-down noRotate"></i></span>
                     </button>
                 </div>
             </div>
@@ -73,7 +76,7 @@
         </div>
         <div class="d-md-none col-md-4 d-flex align-items-center justify-content-center">
             <form class="d-flex mx-3 w-100">
-                <input id="searchBar" class="form-control me-0" type="search" placeholder="Search here" aria-label="Search">
+                <input id="searchBar2" class="form-control me-0" type="search" placeholder="Search here" aria-label="Search">
                 <button id="searchBtn" class="btn ms-0 back-sec" type="submit">Search</button>
             </form>
         </div>
@@ -156,9 +159,24 @@
         </div>
     </section>
 
+    <!-- New ads -->
+    <section class="container">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="customBlack ubuntuFont fw-bold">NEW ADS</h2>
+            </div>
+        </div>
+        <div class="row">
+
+        </div>
+    </section>
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- Swiper Js -->
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
     <!-- Mio Js -->
     <script src="./presto.js"></script>
