few tweaks in categories section

--- a/presto.html
+++ b/presto.html
@@ -113,46 +113,54 @@
         </div>
     </nav>
 
+
     <!-- Categories section -->
-    <section class="container my-5">
-        <div class="row justify-content-center">
-            <div class="col-12 col-sm-6 col-lg-3 mx-0 px-0 d-flex justify-content-center">
-                <div class="card categoriesCards categoriesCard1">
-                    <div class="bgCategories">
-                    </div>
-                    <div class="p-3 textCategories">
-                        <h3 class="customBlack">Laptop collection</h3>
-                        <button class="shopBtn customBlack">SHOP NOW <i class="fa-solid fa-circle-arrow-right"></i></button>
-                    </div>
+    <section class="container-fluid pb-5">
+        <div class="container my-5">
+            <div class="row">
+                <div class="col-12 my-4 ms-5">
+                    <h2 class="customBlack ubuntuFont fw-bold text-center">CATEGORIES</h2>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 mx-0 px-0 d-flex justify-content-center">
-                <div class="card categoriesCards categoriesCard2">
-                    <div class="bgCategories">
-                    </div>
-                    <div class="p-3 textCategories">
-                        <h3 class="customBlack">Accessories collection</h3>
-                        <button class="shopBtn customBlack">SHOP NOW <i class="fa-solid fa-circle-arrow-right"></i></button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3 mx-0 px-0 d-flex justify-content-center">
-                <div class="card categoriesCards categoriesCard3">
-                    <div class="bgCategories">
-                    </div>
-                    <div class="p-3 textCategories">
-                        <h3 class="customBlack">Cameras collection</h3>
-                        <button class="shopBtn customBlack">SHOP NOW <i class="fa-solid fa-circle-arrow-right"></i></button>
+            <div class="row justify-content-center">
+                <div class="col-12 col-sm-6 col-lg-3 mx-0 px-0 d-flex justify-content-center">
+                    <div class="card categoriesCards categoriesCard1">
+                        <div class="bgCategories">
+                        </div>
+                        <div class="p-3 textCategories">
+                            <h3 class="customBlack">Laptop collection</h3>
+                            <button class="shopBtn customBlack">SHOP NOW <i class="fa-solid fa-circle-arrow-right"></i></button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3 mx-0 px-0 d-flex justify-content-center">
-                <div class="card categoriesCards categoriesCard4">
-                    <div class="bgCategories">
+                <div class="col-12 col-sm-6 col-lg-3 mx-0 px-0 d-flex justify-content-center">
+                    <div class="card categoriesCards categoriesCard2">
+                        <div class="bgCategories">
+                        </div>
+                        <div class="p-3 textCategories">
+                            <h3 class="customBlack">Accessories collection</h3>
+                            <button class="shopBtn customBlack">SHOP NOW <i class="fa-solid fa-circle-arrow-right"></i></button>
+                        </div>
                     </div>
-                    <div class="p-3 textCategories">
-                        <h3 class="customBlack">Smartphones collection</h3>
-                        <button class="shopBtn customBlack">SHOP NOW <i class="fa-solid fa-circle-arrow-right"></i></button>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 mx-0 px-0 d-flex justify-content-center">
+                    <div class="card categoriesCards categoriesCard3">
+                        <div class="bgCategories">
+                        </div>
+                        <div class="p-3 textCategories">
+                            <h3 class="customBlack">Cameras collection</h3>
+                            <button class="shopBtn customBlack">SHOP NOW <i class="fa-solid fa-circle-arrow-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 mx-0 px-0 d-flex justify-content-center">
+                    <div class="card categoriesCards categoriesCard4">
+                        <div class="bgCategories">
+                        </div>
+                        <div class="p-3 textCategories">
+                            <h3 class="customBlack">Smartphones collection</h3>
+                            <button class="shopBtn customBlack">SHOP NOW <i class="fa-solid fa-circle-arrow-right"></i></button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -160,14 +168,44 @@
     </section>
 
     <!-- New ads -->
-    <section class="container">
-        <div class="row">
-            <div class="col-12">
-                <h2 class="customBlack ubuntuFont fw-bold">NEW ADS</h2>
+    <section class="container-fluid back-main text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 my-4 ms-5">
+                    <h2 class="customBlack ubuntuFont fw-bold">NEW ADS</h2>
+                </div>
             </div>
-        </div>
-        <div class="row">
-
+            <div class="row mt-3">
+                <div class="col-3 card d-flex align-items-center productCard mx-3 shadow" style="width: 18rem;">
+                    <img class="card-img-top" src="https://technext.github.io/electro/img/shop01.png" alt="Immagine smartphone">
+                    <div class="card-body">
+                        <p class="card-title productCategory text-center">CATEGORY</p>
+                        <a href="#"><p class="card-text productName text-center">PRODUCT NAME</p></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <!-- Slider main container -->
+                <div class="swiper">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">Slide 1</div>
+                    <div class="swiper-slide">Slide 2</div>
+                    <div class="swiper-slide">Slide 3</div>
+                    ...
+                    </div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+                
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                
+                    <!-- If we need scrollbar -->
+                    <div class="swiper-scrollbar"></div>
+                </div>
+            </div>
         </div>
     </section>
 
