more tweaks to navbar and header

--- a/presto.html
+++ b/presto.html
@@ -87,7 +87,7 @@
     </header>
     
     <!-- Navbar -->
-    <nav id="navbarContainerFluid" class="navbar navbar-expand-md navbar-light container-fluid back-main pb-3">
+    <nav id="navbarContainerFluid" class="navbar navbar-expand-md navbar-light container-fluid back-main pb-3 pt-0">
         <div class="container">
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-md-0">
