--- a/presto.html
+++ b/presto.html
@@ -179,14 +179,14 @@
     </section>
     
     <!-- New ads -->
-    <section id="newAdsSectionContainerFluid" class="container-fluid back-main text-center pt-3">
+    <section id="newAdsSectionContainerFluid" class="container-fluid back-main text-center py-3">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 my-4">
                     <h2 class="customBlack ubuntuFont fw-bold">NEW ADS</h2>
                 </div>
             </div>
-            <div class="row mt-3 justify-content-center">
+            <!-- <div class="row mt-3 justify-content-center">
                 <div class="col-3 card d-flex align-items-center productCard m-3" style="width: 18rem;">
                     <img class="card-img-top" src="https://technext.github.io/electro/img/shop01.png" alt="Immagine smartphone">
                     <div class="card-body py-1">
@@ -207,146 +207,14 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div id="swiperRow" class="row my-3 w-100">
+            </div> -->
+            <div id="swiperRow" class="row mb-3 w-100">
                 <div class="col-12 p-0">
                     <!-- Slider main container -->
-                    <div class="swiper p-3">
+                    <div class="swiper px-3 pb-3">
                         <!-- Additional required wrapper -->
-                        <div class="swiper-wrapper">
+                        <div id="newAdsWrapper" class="swiper-wrapper">
                             <!-- Slides -->
-                            <div class="swiper-slide">
-                                <div class="card d-flex align-items-center productCard" style="width: 18rem;">
-                                    <img class="card-img-top" src="https://technext.github.io/electro/img/shop01.png" alt="Immagine smartphone">
-                                    <div class="card-body py-1">
-                                        <p class="card-title productCategory text-center mt-3">CATEGORY</p>
-                                        <a href="#"><p class="card-text productName text-center">PRODUCT NAME</p></a>
-                                        <p class="text-center secColor fw-bold fs-5 mt-2 mb-0">150 $</p>
-                                    </div>
-                                    <div class="row mb-2 py-2 w-100 justify-content-around">
-                                        <div class="col-3 p-0 d-flex justify-content-center align-items-center">
-                                            <button id="heartBtn" class="productBtns">
-                                                <i class="fa-regular fa-heart"></i>
-                                            </button>
-                                        </div>
-                                        <div class="col-3 p-0 d-flex justify-content-center align-items-center">
-                                            <button id="cartBtn" class="productBtns">
-                                                <i class="fa-solid fa-cart-shopping"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="card d-flex align-items-center productCard" style="width: 18rem;">
-                                    <img class="card-img-top" src="https://technext.github.io/electro/img/shop01.png" alt="Immagine smartphone">
-                                    <div class="card-body py-1">
-                                        <p class="card-title productCategory text-center mt-3">CATEGORY</p>
-                                        <a href="#"><p class="card-text productName text-center">PRODUCT NAME</p></a>
-                                        <p class="text-center secColor fw-bold fs-5 mt-2 mb-0">150 $</p>
-                                    </div>
-                                    <div class="row mb-2 py-2 w-100 justify-content-around">
-                                        <div class="col-3 p-0 d-flex justify-content-center align-items-center">
-                                            <button id="heartBtn" class="productBtns">
-                                                <i class="fa-regular fa-heart"></i>
-                                            </button>
-                                        </div>
-                                        <div class="col-3 p-0 d-flex justify-content-center align-items-center">
-                                            <button id="cartBtn" class="productBtns">
-                                                <i class="fa-solid fa-cart-shopping"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="card d-flex align-items-center productCard" style="width: 18rem;">
-                                    <img class="card-img-top" src="https://technext.github.io/electro/img/shop01.png" alt="Immagine smartphone">
-                                    <div class="card-body py-1">
-                                        <p class="card-title productCategory text-center mt-3">CATEGORY</p>
-                                        <a href="#"><p class="card-text productName text-center">PRODUCT NAME</p></a>
-                                        <p class="text-center secColor fw-bold fs-5 mt-2 mb-0">150 $</p>
-                                    </div>
-                                    <div class="row mb-2 py-2 w-100 justify-content-around">
-                                        <div class="col-3 p-0 d-flex justify-content-center align-items-center">
-                                            <button id="heartBtn" class="productBtns">
-                                                <i class="fa-regular fa-heart"></i>
-                                            </button>
-                                        </div>
-                                        <div class="col-3 p-0 d-flex justify-content-center align-items-center">
-                                            <button id="cartBtn" class="productBtns">
-                                                <i class="fa-solid fa-cart-shopping"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="card d-flex align-items-center productCard" style="width: 18rem;">
-                                    <img class="card-img-top" src="https://technext.github.io/electro/img/shop01.png" alt="Immagine smartphone">
-                                    <div class="card-body py-1">
-                                        <p class="card-title productCategory text-center mt-3">CATEGORY</p>
-                                        <a href="#"><p class="card-text productName text-center">PRODUCT NAME</p></a>
-                                        <p class="text-center secColor fw-bold fs-5 mt-2 mb-0">150 $</p>
-                                    </div>
-                                    <div class="row mb-2 py-2 w-100 justify-content-around">
-                                        <div class="col-3 p-0 d-flex justify-content-center align-items-center">
-                                            <button id="heartBtn" class="productBtns">
-                                                <i class="fa-regular fa-heart"></i>
-                                            </button>
-                                        </div>
-                                        <div class="col-3 p-0 d-flex justify-content-center align-items-center">
-                                            <button id="cartBtn" class="productBtns">
-                                                <i class="fa-solid fa-cart-shopping"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="card d-flex align-items-center productCard" style="width: 18rem;">
-                                    <img class="card-img-top" src="https://technext.github.io/electro/img/shop01.png" alt="Immagine smartphone">
-                                    <div class="card-body py-1">
-                                        <p class="card-title productCategory text-center mt-3">CATEGORY</p>
-                                        <a href="#"><p class="card-text productName text-center">PRODUCT NAME</p></a>
-                                        <p class="text-center secColor fw-bold fs-5 mt-2 mb-0">150 $</p>
-                                    </div>
-                                    <div class="row mb-2 py-2 w-100 justify-content-around">
-                                        <div class="col-3 p-0 d-flex justify-content-center align-items-center">
-                                            <button id="heartBtn" class="productBtns">
-                                                <i class="fa-regular fa-heart"></i>
-                                            </button>
-                                        </div>
-                                        <div class="col-3 p-0 d-flex justify-content-center align-items-center">
-                                            <button id="cartBtn" class="productBtns">
-                                                <i class="fa-solid fa-cart-shopping"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="card d-flex align-items-center productCard" style="width: 18rem;">
-                                    <img class="card-img-top" src="https://technext.github.io/electro/img/shop01.png" alt="Immagine smartphone">
-                                    <div class="card-body py-1">
-                                        <p class="card-title productCategory text-center mt-3">CATEGORY</p>
-                                        <a href="#"><p class="card-text productName text-center">PRODUCT NAME</p></a>
-                                        <p class="text-center secColor fw-bold fs-5 mt-2 mb-0">150 $</p>
-                                    </div>
-                                    <div class="row mb-2 py-2 w-100 justify-content-around">
-                                        <div class="col-3 p-0 d-flex justify-content-center align-items-center">
-                                            <button id="heartBtn" class="productBtns">
-                                                <i class="fa-regular fa-heart"></i>
-                                            </button>
-                                        </div>
-                                        <div class="col-3 p-0 d-flex justify-content-center align-items-center">
-                                            <button id="cartBtn" class="productBtns">
-                                                <i class="fa-solid fa-cart-shopping"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                         <!-- If we need pagination -->
                         <div class="swiper-pagination"></div>
