added PostYourAd button

--- a/presto.html
+++ b/presto.html
@@ -116,6 +116,17 @@
             </div>
         </div>
     </nav>
+
+    <!-- Post your ad -->
+    <div id="postYourAdBanner" class="d-flex align-items-center">
+        <button id="postYourAdWords" class="back-sec px-3">
+            Post your ad on Presto.it
+        </button>
+        <button id="postYourAdBtn">
+            <img id="postYourAdIcon" src="./media/circle-plus-solid.svg" alt="Plus icon">
+            <!-- <i class="fa-solid fa-circle-plus"></i> -->
+        </button>
+    </div>
     
     <!-- Categories section -->
     <section id="categoriesSectionContainerFluid" class="container-fluid pb-3">
