--- a/presto.html
+++ b/presto.html
@@ -118,7 +118,7 @@
     </nav>
 
     <!-- Post your ad -->
-    <div id="postYourAdBanner" class="d-flex align-items-center">
+    <div id="postYourAdBanner" class="d-none align-items-center">
         <button id="postYourAdWords" class="back-sec px-3">
             Post your ad on Presto.it
         </button>
@@ -191,7 +191,7 @@
     
     <!-- New ads -->
     <section id="newAdsSectionContainerFluid" class="container-fluid back-main text-center py-3">
-        <div class="container">
+        <divs class="container">
             <div class="row justify-content-center">
                 <div class="col-12 my-4">
                     <h2 class="customBlack ubuntuFont fw-bold">NEW ADS</h2>
@@ -239,7 +239,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </divs>
     </section>
 
 
