added closing button to PostYourAd banner

--- a/presto.html
+++ b/presto.html
@@ -125,6 +125,9 @@
         <button id="postYourAdBtn">
             <img id="postYourAdIcon" src="./media/circle-plus-solid.svg" alt="Plus icon">
         </button>
+        <button id="closePostYourAdBannerBtn">
+            <i class="fa-solid fa-xmark"></i>
+        </button>
     </div>
     
     <!-- Presentation section (experiments) -->
