created and added correct logo to tab title

--- a/presto.html
+++ b/presto.html
@@ -25,7 +25,7 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="./presto.css">
     <title>Presto.it</title>
-    <link rel="shortcut icon" href="./media/p.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./media/pLogoNewNew.png" type="image/x-icon">
 </head>
 <body>
     
