--- a/presto.html
+++ b/presto.html
@@ -275,8 +275,32 @@
                     <div id="mottoPDiv" class="row">
                         <p class="ubuntuFont customBlack fw-bold ps-3">The best place to sell and search</p>
                     </div>
+                    <div class="row ps-3 mt-2">
+                        <div class="col-1">
+                            <i class="secColor fa-solid fa-location-dot"></i>
+                        </div>
+                        <div class="col-10">
+                            <p class="mb-2 customBlack ubuntuFont">1734 Stonecoal Road</p>
+                        </div>
+                    </div>
+                    <div class="row ps-3">
+                        <div class="col-1">
+                            <i class="secColor fa-solid fa-envelope"></i>
+                        </div>
+                        <div class="col-10">
+                            <p class="mb-2 customBlack ubuntuFont">info@presto.it</p>
+                        </div>
+                    </div>
+                    <div class="row ps-3">
+                        <div class="col-1">
+                            <i class="secColor fa-solid fa-phone"></i>
+                        </div>
+                        <div class="col-10">    
+                            <p class="mb-2 customBlack ubuntuFont">+021-95-51-84</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-6 col-md-3">
+                <div class="col-6 col-md-3 mt-3">
                     <ul id="footerCategoriesList" class="secColor ubuntuFont">
                         <h6 id="footerCategoriesTitle" class="fw-bold fs-5 pt-4 pb-2">CATEGORIES</h6>
                         <li id="footerCategoriesListItem" class="d-flex align-items-center py-1">
@@ -302,7 +326,7 @@
                     </ul>
                 </div>
                 <div class="col-6 col-md-3">
-                    <ul id="footerInfoList" class="secColor ubuntuFont">
+                    <ul id="footerInfoList" class="secColor ubuntuFont mt-3">
                         <h6 id="footerInfoTitle" class="fw-bold fs-5 pt-4 pb-2">INFO</h6>
                         <li id="footerInfoListItem" class="d-flex align-items-center py-1">
                             <a id="footerInfoListAnchor" href="#">About us</a>
@@ -327,7 +351,7 @@
                     </ul>
                 </div>
                 <div class="col-6 col-md-2 pe-0 px-md-0">
-                    <ul id="footerAppsLinks" class="secColor ubuntuFont px-md-0">
+                    <ul id="footerAppsLinks" class="secColor ubuntuFont px-md-0 mt-3">
                         <h6 id="footerAppsLinksTitle" class="fw-bold fs-5 pt-4 pb-2">APPS</h6>
                         <li id="footerAppsLinksItem" class="d-flex align-items-center py-1">
                             <a id="footerAppsLinksAnchor" href="#">Google Play
