added all links to contacts, socials and apps in footer

--- a/presto.html
+++ b/presto.html
@@ -277,27 +277,27 @@
                     </div>
                     <div class="row ps-3 mt-2">
                         <div class="col-1">
-                            <i class="secColor fa-solid fa-location-dot"></i>
+                            <i class="contactsIcons secColor fa-solid fa-location-dot"></i>
                         </div>
-                        <div class="col-10">
-                            <p class="mb-2 customBlack ubuntuFont">1734 Stonecoal Road</p>
-                        </div>
+                        <a href="https://goo.gl/maps/HFwYjZ7umQAwZfKz5" target="_blank" class="col-10">
+                            <p class="mb-2 customBlack ubuntuFont">37100 Verona, Italy</p>
+                        </a>
                     </div>
                     <div class="row ps-3">
                         <div class="col-1">
-                            <i class="secColor fa-solid fa-envelope"></i>
+                            <i class="contactsIcons secColor fa-solid fa-envelope"></i>
                         </div>
-                        <div class="col-10">
+                        <a href="mailto:info@presto.it" class="col-10">
                             <p class="mb-2 customBlack ubuntuFont">info@presto.it</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="row ps-3">
                         <div class="col-1">
-                            <i class="secColor fa-solid fa-phone"></i>
+                            <i class="contactsIcons secColor fa-solid fa-phone"></i>
                         </div>
-                        <div class="col-10">    
-                            <p class="mb-2 customBlack ubuntuFont">+021-95-51-84</p>
-                        </div>
+                        <a href="tel: +39 045123456" class="col-10">    
+                            <p class="mb-2 customBlack ubuntuFont">+39 045123456</p>
+                        </a>
                     </div>
                 </div>
                 <div class="col-6 col-md-3 mt-3">
@@ -350,18 +350,43 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-6 col-md-2 pe-0 px-md-0">
-                    <ul id="footerAppsLinks" class="secColor ubuntuFont px-md-0 mt-3">
-                        <h6 id="footerAppsLinksTitle" class="fw-bold fs-5 pt-4 pb-2">APPS</h6>
-                        <li id="footerAppsLinksItem" class="d-flex align-items-center py-1">
-                            <a id="footerAppsLinksAnchor" href="#">Google Play
-                            <i id="footerAppsLinksIcon" class="fa-brands fa-google-play ms-2"></i></a>
-                        </li>
-                        <li id="footerAppsLinksItem" class="d-flex align-items-center py-1">
-                            <a id="footerAppsLinksAnchor" href="#">App Store
-                            <i id="footerAppsLinksIcon" class="fa-brands fa-app-store ms-2"></i></a>
-                        </li>
-                    </ul>
+                <div class="col-6 col-md-2 pe-md-0">
+                    <div id="footerAppsSection" class="row mx-0 px-md-0">
+                        <ul id="footerAppsLinks" class="secColor ubuntuFont px-md-0 mt-3 ps-0">
+                            <h6 id="footerAppsLinksTitle" class="fw-bold fs-5 pt-4 pb-2">APPS</h6>
+                            <li id="footerAppsLinksItem" class="d-flex align-items-center py-1">
+                                <a id="footerAppsLinksAnchor" href="https://play.google.com/store/apps/details?id=com.jointag.agsm&hl=it&gl=US" target="_blank">Google Play
+                                <i id="footerAppsLinksIcon" class="fa-brands fa-google-play ms-2"></i></a>
+                            </li>
+                            <li id="footerAppsLinksItem" class="d-flex align-items-center py-1">
+                                <a id="footerAppsLinksAnchor" href="https://apps.apple.com/it/app/verona-smartapp/id1178091059?l=en" target="_blank">App Store
+                                <i id="footerAppsLinksIcon" class="fa-brands fa-app-store ms-2"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="footerSocialsSection" class="row px-md-0 mt-3 mx-0">
+                        <h6 id="footerSocialsTitle" class="fw-bold fs-5 pb-2 mb-0 px-0 ubuntuFont secColor">SOCIAL</h6>
+                        <div class="col-1 ps-2 pe-3 pe-md-2 pe-lg-3 d-flex justify-content-center">
+                            <a href="https://www.facebook.com/" target="_blank" class="socialsAnchors customBlack">
+                                <i class="fa-brands fa-facebook ps-0"></i>
+                            </a>
+                        </div>
+                        <div class="col-1 pe-3 pe-md-2 pe-lg-3 d-flex justify-content-center">
+                            <a href="https://www.instagram.com/" target="_blank" class="socialsAnchors customBlack">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                        </div>
+                        <div class="col-1 pe-3 pe-md-2 pe-lg-3 d-flex justify-content-center">
+                            <a href="https://twitter.com/" target="_blank" class="socialsAnchors customBlack">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                        </div>
+                        <div class="col-1 pe-3 pe-md-2 pe-lg-3 d-flex justify-content-center">
+                            <a href="https://it.linkedin.com/" target="_blank" class="socialsAnchors customBlack">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
