created join our team section

--- a/presto.html
+++ b/presto.html
@@ -264,6 +264,36 @@
         </div>
     </section>
 
+    <!-- Work with us -->
+    <section class="container-fluid d-flex justify-content-center px-0">
+        <div class="container my-5 mx-md-0 px-md-0">
+            <div class="row justify-content-center align-items-center mx-4 mx-md-0">
+                <div id="contactUsQuestion" class="col-12 col-md-5 customBlack ubuntuFont mx-5 mx-md-3 mt-md-4 mt-lg-5">
+                    <p id="wannaWorkWithUs" class="me-md-5">Wanna work with us?</p>
+                    <h5 class="me-md-5 bounce_button fw-bold">JOIN OUR TEAM<i class="fa-solid fa-circle-arrow-down ms-2"></i></h5>
+                    <img src="./media/contactUsOrange.svg" alt="Contact us image" class="w-100 mb-3 mb-md-0">
+                </div>
+                <div id="contactUsFormCard" class="card col-12 col-md-6 customBlack ubuntuFont text-center d-flex align-items-center mx-3 ms-md-0 me-md-4">
+                    <h5 id="contactUsH5">Fill the application form</h5>
+                    <div class="form-floating">
+                        <input type="text" class="form-control" id="floatingPassword" placeholder="Password">
+                        <label for="floatingPassword">Full name</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">Email address</label>
+                    </div>
+                    <div class="form-floating">
+                        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+                        <label for="floatingTextarea">Message</label>
+                    </div>
+                    <button id="uploadCVBtn">Upload your CV</button>
+                    <button id="sendApplicationBtn">Send application</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer  -->
     <footer id="footerContainer" class="container-fluid back-main">
         <div class="container">
@@ -407,5 +437,5 @@
     <!-- My Js -->
     <script src="./presto.js"></script>
 
-    </body>
+</body>
 </html>
