added newsletter section

--- a/presto.html
+++ b/presto.html
@@ -281,7 +281,7 @@
                         <input type="text" class="form-control" id="floatingPassword" placeholder="Password">
                         <label for="floatingPassword">Full name</label>
                     </div>
-                    <div class="form-floating mb-3">
+                    <div class="form-floating mb-2">
                         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
                         <label for="floatingInput">Email address</label>
                     </div>
@@ -291,6 +291,23 @@
                     </div>
                     <button id="uploadCVBtn">Upload your CV</button>
                     <button id="sendApplicationBtn">Send application</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Newsletter -->
+    <section id="newsletterContainerFluid" class="container-fluid">
+        <hr id="newsletterHr" class="mt-0 secColor w-100">
+        <div class="container">
+            <div class="row text-center pt-3 justify-content-center">
+                <div id="newsletterDiv" class="col-12">
+                    <h5 id="newsletterH5" class="customBlack mb-4">Sign up for our <span id="newsletterSpan">NEWSLETTER</span></h5>
+                    <div id="inputEmailDiv" class="d-flex justify-content-center mb-5">
+                        <input id="newsletterInput" type="email" placeholder="  Enter your email">
+                        <button id="newsletterBtn" ><i class="fa-regular fa-envelope pe-2"></i>Subscribe</button>
+                    </div>
+                    <i id="bgEnvelope" class="fa-regular fa-envelope secColor"></i>
                 </div>
             </div>
         </div>
