created the All Ads page

--- a/presto.html
+++ b/presto.html
@@ -24,7 +24,7 @@
     
     <!-- My CSS -->
     <link rel="stylesheet" href="./presto.css">
-    <title>Presto.it</title>
+    <title>Presto.it | Home</title>
     <link rel="shortcut icon" href="./media/pLogoNewNew.png" type="image/x-icon">
 </head>
 <body>
@@ -92,10 +92,10 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./presto.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hot Deals</a>
+                        <a class="nav-link" href="./ads.html">All Ads</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Categories</a>
@@ -303,7 +303,7 @@
             <div class="row text-center pt-3 justify-content-center">
                 <div id="newsletterDiv" class="col-12">
                     <h5 id="newsletterH5" class="customBlack mb-4">Sign up for our <span id="newsletterSpan">NEWSLETTER</span></h5>
-                    <div id="inputEmailDiv" class="d-flex justify-content-center mb-5">
+                    <div id="inputEmailDiv" class="d-flex justify-content-center">
                         <input id="newsletterInput" type="email" placeholder="  Enter your email">
                         <button id="newsletterBtn" ><i class="fa-regular fa-envelope pe-2"></i>Subscribe</button>
                     </div>
@@ -353,7 +353,7 @@
                     <ul id="footerCategoriesList" class="secColor ubuntuFont">
                         <h6 id="footerCategoriesTitle" class="fw-bold fs-5 pt-4 pb-2">CATEGORIES</h6>
                         <li id="footerCategoriesListItem" class="d-flex align-items-center py-1">
-                            <a id="footerCategoriesListAnchor" href="#">Hot deals</a>
+                            <a id="footerCategoriesListAnchor" href="./ads.html">All Ads</a>
                             <i id="footerCategoriesListIcon" class="fa-solid fa-circle-arrow-right ms-2 d-none secColor"></i>
                         </li>
                         <li id="footerCategoriesListItem" class="d-flex align-items-center py-1">
