--- a/ads.html
+++ b/ads.html
@@ -126,33 +126,75 @@
     </div> -->
 
 
-    <!-- Search filters -->
-    <section id="searchFiltersContainerFluid" class="container-fluid">
+    <!-- Search filters (1) -->
+    <div class="container-fluid px-4">
+        <div id="searchFiltersContainer" class="container back-sec">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="form-floating my-2 mx-auto">
+                        <input type="text" class="form-control" id="searchByNameInput" placeholder="Search by name">
+                        <label for="searchByNameInput" class="">Search by name</label>
+                    </div>
+                    <!-- <label for="searchByNameInput" class="ps-1 ubuntuFont customBlack">Search by name</label> -->
+                </div>
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="form-floating my-2 mx-auto">
+                        <select class="form-select" id="searchByCategoryInput" aria-label="Floating label select example">
+                          <option selected>All categories</option>
+                          <option value="1">Laptops</option>
+                          <option value="2">Smartphones</option>
+                          <option value="3">Cameras</option>
+                          <option value="3">Accessories</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 row justify-content-center">
+                    <div id="priceSearchRow" class="row mx-auto">
+                        <div class="form-floating my-2 pe-1 ps-0 w-50">
+                            <input type="number" class="form-control" id="minInput">
+                            <label id="priceLabels" for="minInput">Min price</label>
+                        </div>
+                        <div class="form-floating my-2 ps-1 pe-0 w-50">
+                            <input type="number" class="form-control" id="maxInput">
+                            <label id="priceLabels" for="maxInput">Max price</label>
+                        </div>
+                    </div>
+                </div>
+                <!-- fixare tasto centralmente -->
+                <div class="col-12 col-sm-6 col-md-3 d-flex justify-content-center">
+                    <button id="searchFilterBtn" class="col-6 col-md-2 mx-1 px-1 ubuntuFont customBlack">Search</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Search filters (2)-->
+    <!-- <section id="searchFiltersContainerFluid" class="container-fluid">
         <div class="container">
             <div id="searchFilterRow" class="row m-4">
-                <div id="searchFilterCol" class="col-12 card back-sec py-5">
-                    <div class="row">
-                        <div class="col-3 mx-1">
-                            <label for="searchByNameInput">Search by name</label>
-                            <input id="searchByNameInput" type="text">
+                <div id="searchFilterCol" class="col-12 card back-sec py-4">
+                    <div class="row justify-content-center">
+                        <div class="col-6 col-md-3 mx-0 px-1">
+                            <label for="searchByNameInput" class="ps-1 ubuntuFont customBlack">Search by name</label>
+                            <input id="searchByNameInput" type="text" class="w-100" placeholder=" Digit here">
                         </div>
-                        <div class="col-3 mx-1">
-                            <label for="searchByCategoryInput">Search by category</label>
-                            <input id="searchByCategoryInput" type="text">
+                        <div class="col-6 col-md-3 mx-0 px-1">
+                            <label for="searchByCategoryInput" class="ps-1 ubuntuFont customBlack">Search by category</label>
+                            <input id="searchByCategoryInput" type="text" class="w-100">
                         </div>
-                        <div class="col-4 mx-1">
-                            <label for="searchByPriceInput">Search by price</label>
-                            <div id="searchByPriceInput">
-                                <input type="number">
-                                <input type="number">
+                        <div class="col-6 col-md-3 mx-0 px-1">
+                            <label for="searchByPriceInput" class="ps-1 ubuntuFont customBlack">Search by price</label>
+                            <div id="searchByPriceInput" class="d-flex justify-content-center">
+                                <input type="number" class="mx-0 px-1 w-100">
+                                <input type="number" class="mx-0 px-1 w-100">
                             </div>
                         </div>
-                        <button id="searchFilterBtn" class="col-1 mx-1 px-1">Search</button>
+                        <button id="searchFilterBtn" class="col-6 col-md-2 mx-1 px-1">Search</button>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- Newsletter -->
