--- a/ads.html
+++ b/ads.html
@@ -148,7 +148,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-3 row justify-content-center">
+                <div class="col-12 col-sm-6 col-md-4 row justify-content-center">
                     <div id="priceSearchRow" class="row mx-auto">
                         <div class="form-floating my-2 pe-1 ps-0 w-50">
                             <input type="number" class="form-control" id="minInput">
@@ -161,8 +161,8 @@
                     </div>
                 </div>
                 <!-- fixare tasto centralmente -->
-                <div class="col-12 col-sm-6 col-md-3 d-flex justify-content-center">
-                    <button id="searchFilterBtn" class="col-6 col-md-2 mx-1 px-1 ubuntuFont customBlack">Search</button>
+                <div id="searchFilterBtnCol" class="col-12 col-sm-6 col-md-2 d-flex justify-content-center align-items-center">
+                    <button id="searchFilterBtn" class="col-6 col-md-12 mx-1 px-1 ubuntuFont customBlack">Search</button>
                 </div>
             </div>
         </div>
