--- a/presto.html
+++ b/presto.html
@@ -152,7 +152,7 @@
     <section id="categoriesSectionContainerFluid" class="container-fluid pb-3">
         <div class="container mb-5 pt-5">
             <div class="row justify-content-center">
-                <div class="col-12 my-4">
+                <div class="col-12 mt-4 mb-5">
                     <h2 class="customBlack ubuntuFont fw-bold text-center"><span id="categoriesText">CATEGORIES</span></h2>
                 </div>
             </div>
@@ -214,8 +214,8 @@
         <div class="container-fluid container-lg">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-12 my-4">
-                        <h2 class="customBlack ubuntuFont fw-bold">NEW ADS</h2>
+                    <div class="col-12 mb-4 mt-5">
+                        <h2 class="customBlack ubuntuFont fw-bold"><span id="newAdsText">NEW ADS</span></h2>
                     </div>
                 </div>
                 <!-- <div class="row mt-3 justify-content-center">
