--- a/ads.html
+++ b/ads.html
@@ -126,6 +126,11 @@
     </div> -->
 
 
+    <!-- Explore ads header -->
+    <header class="container-fluid text-center my-5">
+        <h1 class="ubuntuFont customBlack"><span id="exploreAllAdsSpan">Explore all ads</span></h1>
+    </header>
+
     <!-- Search filters (1) -->
     <div class="container-fluid px-4">
         <div id="searchFiltersContainer" class="container back-sec">
