--- a/ads.html
+++ b/ads.html
@@ -130,7 +130,7 @@
     <header class="container-fluid text-center my-5">
         <h1 class="ubuntuFont customBlack"><span id="exploreAllAdsSpan">Explore all ads</span></h1>
     </header>
-
+    
     <!-- Search filters (1) -->
     <div class="container-fluid px-4">
         <div id="searchFiltersContainer" class="container back-sec">
@@ -140,7 +140,6 @@
                         <input type="text" class="form-control" id="searchByNameInput" placeholder="Search by name">
                         <label for="searchByNameInput" class="">Search by name</label>
                     </div>
-                    <!-- <label for="searchByNameInput" class="ps-1 ubuntuFont customBlack">Search by name</label> -->
                 </div>
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="form-floating my-2 mx-auto">
@@ -156,16 +155,15 @@
                 <div class="col-12 col-sm-6 col-md-4 row justify-content-center">
                     <div id="priceSearchRow" class="row mx-auto">
                         <div class="form-floating my-2 pe-1 ps-0 w-50">
-                            <input type="number" class="form-control" id="minInput">
+                            <input type="number" class="form-control" id="minInput" placeholder="Min price">
                             <label id="priceLabels" for="minInput">Min price</label>
                         </div>
                         <div class="form-floating my-2 ps-1 pe-0 w-50">
-                            <input type="number" class="form-control" id="maxInput">
+                            <input type="number" class="form-control" id="maxInput" placeholder="Max price">
                             <label id="priceLabels" for="maxInput">Max price</label>
                         </div>
                     </div>
                 </div>
-                <!-- fixare tasto centralmente -->
                 <div id="searchFilterBtnCol" class="col-12 col-sm-6 col-md-2 d-flex justify-content-center align-items-center">
                     <button id="searchFilterBtn" class="col-6 col-md-12 mx-1 px-1 ubuntuFont customBlack">Search</button>
                 </div>
