--- a/ads.html
+++ b/ads.html
@@ -132,7 +132,7 @@
     </header>
     
     <!-- Search filters (1) -->
-    <div class="container-fluid px-4">
+    <section class="container-fluid px-4">
         <div id="searchFiltersContainer" class="container back-sec">
             <div class="row align-items-center justify-content-center">
                 <div class="col-12 col-sm-6 col-md-3">
@@ -154,11 +154,11 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 row justify-content-center">
                     <div id="priceSearchRow" class="row mx-auto">
-                        <div class="form-floating my-2 pe-1 ps-0 w-50">
+                        <div id="minPriceInputDiv" class="form-floating my-2 pe-1 ps-0 w-50">
                             <input type="number" class="form-control" id="minInput" placeholder="Min price">
                             <label id="priceLabels" for="minInput">Min price</label>
                         </div>
-                        <div class="form-floating my-2 ps-1 pe-0 w-50">
+                        <div id="maxPriceInputDiv" class="form-floating my-2 ps-1 pe-0 w-50">
                             <input type="number" class="form-control" id="maxInput" placeholder="Max price">
                             <label id="priceLabels" for="maxInput">Max price</label>
                         </div>
@@ -169,7 +169,38 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+
+    <!-- Sort filters -->
+    <section class="container-fluid">
+        <div id="sortFiltersContainer" class="container">
+            <div class="row justify-content-between">
+                <div id="sortDisplayDiv" class="col-6 col-lg-4 d-flex align-items-center">
+                    <p class="my-auto mx-1">Display:</p>
+                    <i class="mx-1 mt-1 fa-solid fa-table-cells-large"></i>
+                    <i class="mx-1 mt-1 fa-solid fa-table-list"></i>
+                </div>
+                <div id="sortFiltersDiv" class="col-6 col-lg-3 d-flex align-items-center">
+                    <ul id="ulSortFilters" class="d-flex">
+                        <li class="px-1">Filter:</li>
+                        <li class="px-1">All</li>
+                        <li class="px-1">Searching</li>
+                        <li class="px-1">Selling</li>
+                    </ul>
+                </div>
+                <div id="sortByOrderDiv" class="col-12 col-lg-5 d-flex align-items-center px-2 pt-lg-0">
+                    <p class="my-auto">Sort:</p>
+                    <i class="mt-1 fa-solid fa-arrow-down-short-wide mx-2"></i>
+                    <select id="sortSelect" class="form-select" aria-label="Default select example">
+                        <option class="sortOptions" selected>New to old (default)</option>
+                        <option class="sortOptions" value="3">Old to new</option>
+                        <option class="sortOptions" value="1">A-Z</option>
+                        <option class="sortOptions" value="2">Z-A</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Search filters (2)-->
     <!-- <section id="searchFiltersContainerFluid" class="container-fluid">
