few tweaks to all ads display

--- a/ads.html
+++ b/ads.html
@@ -130,7 +130,7 @@
         <h1 class="ubuntuFont customBlack"><span id="exploreAllAdsSpan">Explore all ads</span></h1>
     </header>
     
-    <!-- Search filters (1) -->
+    <!-- Search filters -->
     <section class="container-fluid px-4">
         <div id="searchFiltersContainer" class="container back-sec">
             <div class="row align-items-center justify-content-center">
@@ -201,11 +201,10 @@
         </div>
     </section>
 
+    <!-- Ads section -->
     <section class="container-fluid">
         <div class="container">
-            <div class="row">
-                <div id="adsWrapper" class="col-12 d-flex">
-                </div>
+            <div id="adsWrapper" class="row justify-content-center">
             </div>
         </div>
     </section>
